<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">ForceDoze</string>
    <string name="service_active">ForceDoze service is active</string>
    <string name="service_inactive">ForceDoze service is inactive</string>
    <string name="service_disabled">ForceDoze service is disabled</string>
    <string name="root_workaround_text">SU permission denied or not available! If you don\'t have root, press \'Root workaround\' to get instructions on how to enable no-root mode</string>
    <string name="root_workaround_button_text">Root workaround</string>
    <string name="close_button_text">Close</string>
    <string name="lockscreen_timeout_snackbar_text">The lockscreen timeout value on your device is too high!</string>
    <string name="more_info_text">More info</string>
    <string name="doze_unsupported_more_info">Some devices have Doze mode disabled by the OEM. This option can enable Doze mode on devices which do not have it enabled by default.\n\nNote: You need to turn on the ForceDoze module in Xposed in order to permanently enable Doze. If you don\'t have Xposed installed, you will have to turn this option on every time you restart your phone.</string>
    <string name="doze_unsupported_more_info_title">Enable Doze on unsupported device</string>
    <string name="enable_doze_button_text">Enable Doze mode</string>
    <string name="xposed_detected_dialog_title">Xposed detected</string>
    <string name="xposed_detected_dialog_text">"ForceDoze has detected that Xposed is installed on your device. In order to make Doze permanently enabled on your device, you need to turn on the ForceDoze module in Xposed. If you don't turn on the module, you will lose Doze functionality on device restart and will have to manually enable Doze again. "</string>
    <string name="no_root_workaround_dialog_title">No-root workaround</string>
    <string name="okay_button_text">Okay</string>
    <string name="share_command_button_text">Share command</string>
    <string name="no_root_workaround_dialog_text">If your device isn\'t rooted, you can manually grant the permission \'android.permission.DUMP\' (and \'android.permission.WRITE_SECURE_SETTINGS\' if you\'re on Nougat) to this app by executing the following ADB command from your PC (the command is one-line, not separated):\n\n \"adb -d shell pm grant com.suyashsrijan.forcedoze android.permission.DUMP\" and the same with WRITE_SECURE_SETTINGS permission (if on Nougat)\n\n Once you have done, please close this app and start again and you will then be able to access the app properly.</string>
    <string name="lockscreen_timeout_dialog_title">Lockscreen timeout</string>
    <string name="open_security_settings_button_text">Open Security Settings</string>
    <string name="lockscreen_timeout_dialog_text_p1">The lockscreen timeout value on your device is too high (</string>
    <string name="lockscreen_timeout_dialog_text_p2">" mins). This means your device does not "</string>
    <string name="lockscreen_timeout_dialog_text_p3">"automatically lock itself after the screen turns off until "</string>
    <string name="lockscreen_timeout_dialog_text_p4">" mins have passed. This also means ForceDoze will wait "</string>
    <string name="lockscreen_timeout_dialog_text_p5">"for "</string>
    <string name="lockscreen_timeout_dialog_text_p6">" mins before making your device enter Doze mode by using a temporary wake lock. If you want ForceDoze to make the device enter Doze mode faster, consider reducing the lockscreen timeout to Immediately in your device's Security Settings. If you want ForceDoze to make the device enter Doze mode regardless of the lockscreen timeout, turn on 'Ignore lockscreen timeout' option in ForceDoze Settings."</string>
    <string name="how_doze_works_dialog_text">How Doze mode works on your device:\n\nIf a user leaves a device unplugged and stationary for a period of time (30 mins), with the screen off, the device enters Doze mode. In Doze mode, the system attempts to conserve battery by restricting apps\' access to network and CPU-intensive services. It also prevents apps from accessing the network and defers their jobs, syncs, and standard alarms\n\nPeriodically, the system exits Doze for a brief time to let apps complete their deferred activities. During this maintenance window, the system runs all pending syncs, jobs, and alarms, and lets apps access the network\n\nAt the conclusion of each maintenance window, the system again enters Doze, suspending network access and deferring jobs, syncs, and alarms. Over time, the system schedules maintenance windows less and less frequently, helping to reduce battery consumption in cases of longer-term inactivity when the device is not connected to a charger.\n\nAs soon as the user wakes the device by moving it, turning on the screen, or connecting a charger, the system exits Doze and all apps return to normal activity\n\nHow ForceDoze works:\n\nForceDoze makes the device enter Doze mode immediately after screen off (or after a user specified delay), instead of waiting for 30 mins for the device to become stationary. On top of that, ForceDoze also turns of the device\'s motion sensors, so Doze doesn\'t deactivate if you move your device. Doze will only deactivate during a maintenance window (as explained above) or when you turn on your screen, which means your device will stay in Doze mode for a much longer time even if the device\'s screen is off and the device is not stationary, which means the battery savings will be a lot higher than normal Doze.</string>
    <string name="error_text">Error</string>
    <string name="please_wait_text">Please wait</string>
    <string name="requesting_su_access_text">Requesting SU access...</string>
    <string name="read_logcat_su_not_avail_or_denied_error_text">SU permission denied or SU not available, so cannot read logcat.\n\nPlease grant READ_LOGS permission via ADB to use this feature: \'adb shell pm grant com.suyashsrijan.forcedoze android.permission.READ_LOGS\' (without quotes)</string>
    <string name="loading_installed_apps_text">Loading installed apps...</string>
    <string name="whitelisting_text">Whitelisting</string>
    <string name="whitelisted_apps_restrictions_text">"An app that is whitelisted can use the network and hold partial wake locks during Doze and App Standby. However, other restrictions still apply to the whitelisted app, just as they do to other apps. For example, the whitelisted app’s jobs and syncs are deferred, and its regular AlarmManager alarms do not fire. "</string>
    <string name="info_text">Info</string>
    <string name="app_already_whitelisted_text">The app you\'re trying to add is already whitelisted!</string>
    <string name="app_not_whitelisted_text">The app you\'re trying to remove does not exist in the whitelist</string>
    <string name="force_doze_info">ForceDoze enables Doze the moment you turn off your screen. It also disables motion sensing so Doze doesn\'t accidentally deactivate unless it\'s time to execute maintenance jobs, making battery savings much higher than standard Doze functionality</string>
    <string name="hi_text">Hi!</string>
    <string name="enable_sensors_setting_title">Don\'t disable sensors on screen off</string>
    <string name="enable_sensors_setting_summary">Don\'t disable device sensors when the device goes into Doze mode</string>
    <string name="disable_when_charging_setting_summary">Turn off ForceDoze when device is plugged in to a charger</string>
    <string name="disable_when_charging_setting_title">Turn off while charging</string>
    <string name="rotate_brightness_fix_setting_summary">Workaround for auto-rotate and auto-brightness not working after screen on</string>
    <string name="rotate_brightness_fix_setting_title">Auto-rotate/brightness fix</string>
    <string name="persistent_notification_setting_summary">Show Doze stats in persistent notification</string>
    <string name="persistent_notification_setting_title">Show persistent notification</string>
    <string name="lockscreen_timeout_setting_summary">Ignore lockscreen timeout and enable Doze immediately after screen off</string>
    <string name="lockscreen_timeout_setting_title">Ignore lockscreen timeout</string>
    <string name="doze_delay_setting_summary">Add a delay before Doze mode kicks in after screen-off</string>
    <string name="doze_delay_setting_title">Doze delay</string>
    <string name="whitelist_apps_setting_summary">Whitelist apps from Doze mode</string>
    <string name="whitelist_apps_setting_text">Whitelist apps</string>
    <string name="doze_unsupported_xposed_setting_summary">Enables Doze on an unsupported device</string>
    <string name="doze_unsupported_xposed_setting_title">Enable Doze on unsupported device</string>
    <string name="doze_sensors_xposed_setting_summary">Prevent Doze from accessing motion sensors (experimental)</string>
    <string name="doze_sensors_xposed_setting_title">Disable motion sensing for Doze (root)</string>
    <string name="reset_forcedoze_setting_summary">Reset ForceDoze to the default state</string>
    <string name="reset_forcedoze_setting_title">Reset ForceDoze</string>
    <string name="clear_doze_stats_setting_summary">Clear Doze battery stats</string>
    <string name="clear_doze_stats_setting_title">Clear stats</string>
    <string name="show_app_logs_setting_summary">Show application debug logs</string>
    <string name="show_app_logs_setting_title">Debug logs</string>
    <string name="share_log_menu_item">Share log</string>
    <string name="share_full_logcat_menu_item">Share full logcat</string>
    <string name="add_menu_item">Add</string>
    <string name="remove_menu_item">Remove</string>
    <string name="settings_menu_item">Settings</string>
    <string name="donate_menu_item">Donate</string>
    <string name="doze_unsupported_menu_item">Enable Doze on unsupported device</string>
    <string name="doze_stats_menu_item">Doze Battery stats</string>
    <string name="more_info_menu_item">More info</string>
    <string name="forcedoze_active_dialog_title">That\'s it</string>
    <string name="forcedoze_active_dialog_text">ForceDoze is now enabled and your standby battery life is going to be much more improved!</string>
    <string name="donate_dialog_title">Support my work</string>
    <string name="donate_dialog_text">ForceDoze is a completely free and open-source app with no ads and I\'ve put a lot of time into making and improving it, with weekly updates to fix bugs and add/improve features. If you like my work, please consider donating in order to motivate me to work harder and produce even more useful apps!</string>
    <string name="donate_dialog_button_text">I want to donate</string>
    <string name="about_forcedoze_setting_title">About ForceDoze</string>
    <string name="about_app_opensrc_text">ForceDoze for Android is built using open source software:</string>
    <string name="version_num_text">1.4.0 rev 68</string>
    <string name="loading_whitelisted_packages">Loading whitelisted packages...</string>
    <string name="translation_credits_dialog_title">Translation credits</string>
    <string name="disable_wifi_during_doze_setting_summary">Turn off WiFi during Doze</string>
    <string name="disable_wifi_during_doze_setting_title">Disable WiFi during Doze</string>
    <string name="disable_data_during_doze_setting_summary">Turn off mobile data during Doze</string>
    <string name="disable_data_during_doze_setting_title">Disable mobile data during Doze</string>
    <string name="add_package_menu_item">Add package</string>
    <string name="remove_package_menu_item">Remove package</string>
</resources>