<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="preferenceScreen">
    <PreferenceCategory android:title="Main" android:key="mainSettings">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enableSensors"
            android:summary="@string/enable_sensors_setting_summary"
            android:title="@string/enable_sensors_setting_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="disableWhenCharging"
            android:summary="@string/disable_when_charging_setting_summary"
            android:title="@string/disable_when_charging_setting_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="autoRotateAndBrightnessFix"
            android:summary="@string/rotate_brightness_fix_setting_summary"
            android:title="@string/rotate_brightness_fix_setting_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showPersistentNotif"
            android:summary="@string/persistent_notification_setting_summary"
            android:title="@string/persistent_notification_setting_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ignoreLockscreenTimeout"
            android:summary="@string/lockscreen_timeout_setting_summary"
            android:title="@string/lockscreen_timeout_setting_title" />
        <Preference
            android:key="whitelistAppsFromDozeMode"
            android:summary="@string/whitelist_apps_setting_summary"
            android:title="@string/whitelist_apps_setting_text">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.suyashsrijan.forcedoze.WhitelistAppsActivity"
                android:targetPackage="com.suyashsrijan.forcedoze" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Doze enhancements" android:key="dozeSettings">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="turnOffWiFiInDoze"
            android:summary="@string/disable_wifi_during_doze_setting_summary"
            android:title="@string/disable_wifi_during_doze_setting_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="turnOffDataInDoze"
            android:summary="@string/disable_data_during_doze_setting_summary"
            android:title="@string/disable_data_during_doze_setting_title" />
        <com.suyashsrijan.forcedoze.NumberPickerPreference
            bindSummary="false"
            max="30"
            min="0"
            step="1"
            android:defaultValue="0"
            android:key="dozeEnterDelay"
            android:summary="@string/doze_delay_setting_summary"
            android:title="@string/doze_delay_setting_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Xposed" android:key="xposedSettings">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="usePermanentDoze"
            android:summary="@string/doze_unsupported_xposed_setting_summary"
            android:title="@string/doze_unsupported_xposed_setting_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="useXposedSensorWorkaround"
            android:summary="@string/doze_sensors_xposed_setting_summary"
            android:title="@string/doze_sensors_xposed_setting_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Other">
        <Preference
            android:key="resetForceDoze"
            android:summary="@string/reset_forcedoze_setting_summary"
            android:title="@string/reset_forcedoze_setting_title" />
        <Preference
            android:key="resetDozeStats"
            android:summary="@string/clear_doze_stats_setting_summary"
            android:title="@string/clear_doze_stats_setting_title" />
        <Preference
            android:key="debugLogs"
            android:summary="@string/show_app_logs_setting_summary"
            android:title="@string/show_app_logs_setting_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.suyashsrijan.forcedoze.LogActivity"
                android:targetPackage="com.suyashsrijan.forcedoze" />
        </Preference>
        <Preference
            android:key="aboutForceDoze"
            android:title="@string/about_forcedoze_setting_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.suyashsrijan.forcedoze.AboutAppActivity"
            android:targetPackage="com.suyashsrijan.forcedoze" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>