<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_app_doze_blocklist"
        android:orderInCategory="100"
        android:title="@string/add_menu_item"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_remove_app_doze_blocklist"
        android:orderInCategory="100"
        android:title="@string/remove_menu_item"
        android:icon="@drawable/ic_remove_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_add_app_doze_blocklist_package"
        android:orderInCategory="100"
        android:title="@string/add_package_menu_item"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_remove_app_doze_blocklist_package"
        android:orderInCategory="100"
        android:title="@string/remove_package_menu_item"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_app_doze_blacklist_more_info"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:orderInCategory="100"
        android:title="@string/more_info_menu_item"
        app:showAsAction="always"/>
</menu>